tdf#134065, tdf#147998: fix thumbnail generation code

This moves the code that draws default thumbnails and overlay icons
from RecentDocsView to RecentDocsViewItem, where the final size of
the thumbnail is defined, so that no stretching of pre-painted icon
would happen.

This also restores the SFX_FILE_THUMBNAIL_* to state before commit
d43c6fa220524a09c0b24cbb5bc03c4456cd2515, and introduces a new set
of SFX_FILE_OVERLAY_* to be used for the overlay icons. This fixes
the display when RecentDocsThumbnail is disabled.

Change-Id: I5eb4aed5325459ddec7e196300cf6c2f9ddf80b7