sfx2/source/control/recentdocsviewitem.cxx
@@ -7,7 +7,12 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
 
+#include <com/sun/star/beans/XPropertySet.hpp>
+#include <com/sun/star/embed/ElementModes.hpp>
+#include <com/sun/star/embed/StorageFactory.hpp>
+#include <com/sun/star/embed/XStorage.hpp>
 #include <com/sun/star/frame/Desktop.hpp>
+#include <com/sun/star/lang/XSingleServiceFactory.hpp>
 #include <com/sun/star/util/URLTransformer.hpp>
 
 #include <comphelper/propertyvalue.hxx>
@@ -17,10 +22,14 @@
 #include <officecfg/Office/Common.hxx>
 #include <recentdocsview.hxx>
 #include <sfx2/templatelocalview.hxx>
+#include <tools/diagnose_ex.h>
 #include <tools/urlobj.hxx>
 #include <unotools/historyoptions.hxx>
 #include <vcl/event.hxx>
 #include <vcl/ptrstyle.hxx>
+#include <vcl/virdev.hxx>
+
+#include <map>
 
 #include <bitmaps.hlst>
 #include "recentdocsviewitem.hxx"
@@ -30,6 +39,98 @@ using namespace com::sun::star;
 using namespace com::sun::star::uno;
 using namespace drawinglayer::primitive2d;
 using namespace drawinglayer::processor2d;
+
+namespace
+{
+bool IsDocEncrypted(const OUString& rURL)
+{
+    uno::Reference<uno::XComponentContext> xContext(::comphelper::getProcessComponentContext());
+    bool bIsEncrypted = false;
+
+    try
+    {
+        uno::Reference<lang::XSingleServiceFactory> xStorageFactory
+            = embed::StorageFactory::create(xContext);
+
+        uno::Sequence<uno::Any> aArgs{ uno::Any(rURL), uno::Any(embed::ElementModes::READ) };
+        uno::Reference<embed::XStorage> xDocStorage(
+            xStorageFactory->createInstanceWithArguments(aArgs), uno::UNO_QUERY);
+        uno::Reference<beans::XPropertySet> xStorageProps(xDocStorage, uno::UNO_QUERY);
+        if (xStorageProps.is())
+        {
+            try
+            {
+                xStorageProps->getPropertyValue("HasEncryptedEntries") >>= bIsEncrypted;
+            }
+            catch (uno::Exception&)
+            {
+            }
+        }
+    }
+    catch (const uno::Exception&)
+    {
+        TOOLS_WARN_EXCEPTION("sfx", "caught exception trying to find out if doc <"
+                                        << rURL << "> is encrypted:");
+    }
+
+    return bIsEncrypted;
+}
+
+BitmapEx getDefaultThumbnail(const OUString& rURL)
+{
+    const OUString aExt = INetURLObject(rURL).getExtension();
+    OUString aIconName(SFX_FILE_THUMBNAIL_DEFAULT);
+
+    static const std::map<sfx2::ApplicationType, OUString> BitmapForExtension
+        = { { sfx2::ApplicationType::TYPE_WRITER, SFX_FILE_THUMBNAIL_TEXT },
+            { sfx2::ApplicationType::TYPE_CALC, SFX_FILE_THUMBNAIL_SHEET },
+            { sfx2::ApplicationType::TYPE_IMPRESS, SFX_FILE_THUMBNAIL_PRESENTATION },
+            { sfx2::ApplicationType::TYPE_DRAW, SFX_FILE_THUMBNAIL_DRAWING },
+            { sfx2::ApplicationType::TYPE_DATABASE, SFX_FILE_THUMBNAIL_DATABASE },
+            { sfx2::ApplicationType::TYPE_MATH, SFX_FILE_THUMBNAIL_MATH } };
+
+    static const std::map<sfx2::ApplicationType, OUString> EncryptedBitmapForExtension
+        = { { sfx2::ApplicationType::TYPE_WRITER, BMP_128X128_WRITER_DOC },
+            { sfx2::ApplicationType::TYPE_CALC, BMP_128X128_CALC_DOC },
+            { sfx2::ApplicationType::TYPE_IMPRESS, BMP_128X128_IMPRESS_DOC },
+            { sfx2::ApplicationType::TYPE_DRAW, BMP_128X128_DRAW_DOC },
+            // You can't save a database file with encryption -> no respective icon
+            { sfx2::ApplicationType::TYPE_MATH, BMP_128X128_MATH_DOC } };
+
+    const std::map<sfx2::ApplicationType, OUString>& rWhichMap
+        = IsDocEncrypted(rURL) ? EncryptedBitmapForExtension : BitmapForExtension;
+
+    auto it = std::find_if(rWhichMap.begin(), rWhichMap.end(),
+                           [&aExt](const auto& r)
+                           { return sfx2::RecentDocsView::typeMatchesExtension(r.first, aExt); });
+    if (it != rWhichMap.end())
+        aIconName = it->second;
+
+    return BitmapEx(aIconName);
+}
+
+BitmapEx getModuleOverlay(const OUString& rURL)
+{
+    const OUString aExt = INetURLObject(rURL).getExtension();
+    OUString aIconName(SFX_FILE_OVERLAY_DEFAULT);
+
+    static const std::map<sfx2::ApplicationType, OUString> OverlayBitmapForExtension
+        = { { sfx2::ApplicationType::TYPE_WRITER, SFX_FILE_OVERLAY_TEXT },
+            { sfx2::ApplicationType::TYPE_CALC, SFX_FILE_OVERLAY_SHEET },
+            { sfx2::ApplicationType::TYPE_IMPRESS, SFX_FILE_OVERLAY_PRESENTATION },
+            { sfx2::ApplicationType::TYPE_DRAW, SFX_FILE_OVERLAY_DRAWING },
+            { sfx2::ApplicationType::TYPE_DATABASE, SFX_FILE_OVERLAY_DATABASE },
+            { sfx2::ApplicationType::TYPE_MATH, SFX_FILE_OVERLAY_MATH } };
+
+    auto it = std::find_if(OverlayBitmapForExtension.begin(), OverlayBitmapForExtension.end(),
+                           [&aExt](const auto& r)
+                           { return sfx2::RecentDocsView::typeMatchesExtension(r.first, aExt); });
+    if (it != OverlayBitmapForExtension.end())
+        aIconName = it->second;
+
+    return BitmapEx(aIconName);
+}
+};
 
 RecentDocsViewItem::RecentDocsViewItem(sfx2::RecentDocsView &rView, const OUString &rURL,
     const OUString &rTitle, const BitmapEx &rThumbnail, sal_uInt16 nId, tools::Long nThumbnailSize)
@@ -52,15 +153,11 @@ RecentDocsViewItem::RecentDocsViewItem(sfx2::RecentDocsView &rView, const OUStri
         aTitle = aURLObj.GetLastName(INetURLObject::DecodeMechanism::WithCharset);
 
     BitmapEx aThumbnail(rThumbnail);
-    //fdo#74834: only load thumbnail if the corresponding option is not disabled in the configuration
-    if (aThumbnail.IsEmpty() && aURLObj.GetProtocol() == INetProtocol::File &&
-            officecfg::Office::Common::History::RecentDocsThumbnail::get())
-        aThumbnail = ThumbnailView::readThumbnail(rURL);
-
     if (aThumbnail.IsEmpty())
     {
+        // 1. Thumbnail absent: get the default thumbnail, checking for encryption.
         // Use the default thumbnail if we have nothing else
-        BitmapEx aExt(sfx2::RecentDocsView::getDefaultThumbnail(rURL));
+        BitmapEx aExt(getDefaultThumbnail(rURL));
         Size aExtSize(aExt.GetSizePixel());
 
         // attempt to make it appear as if it is on a piece of paper
@@ -98,9 +195,30 @@ RecentDocsViewItem::RecentDocsViewItem(sfx2::RecentDocsView &rView, const OUStri
                 ::tools::Rectangle(Point(0, 0), aExtSize),
                 &aExt);
     }
+    else
+    {
+        // 2. Thumbnail present: it's unencrypted document -> just add an overlay.
+        // Pre-scale the thumbnail to the final size before applying the overlay
+        aThumbnail = TemplateLocalView::scaleImg(aThumbnail, nThumbnailSize, nThumbnailSize);
+
+        BitmapEx aModule = getModuleOverlay(rURL);
+        if (!aModule.IsEmpty())
+        {
+            ScopedVclPtr<VirtualDevice> pVirDev(VclPtr<VirtualDevice>::Create());
+            const Size aSize(aThumbnail.GetSizePixel());
+            const Size aOverlaySize(aModule.GetSizePixel());
+            pVirDev->SetOutputSizePixel(aSize);
+            pVirDev->DrawBitmapEx(Point(), aThumbnail);
+            pVirDev->DrawBitmapEx(Point(aSize.Width() - aOverlaySize.Width() - 5,
+                                        aSize.Height() - aOverlaySize.Height() - 5),
+                                  aOverlaySize, aModule);
+            aThumbnail = pVirDev->GetBitmapEx(Point(), aSize);
+            pVirDev.disposeAndClear();
+        }
+    }
 
     maTitle = aTitle;
-    maPreview1 = TemplateLocalView::scaleImg(aThumbnail, nThumbnailSize, nThumbnailSize);
+    maPreview1 = aThumbnail;
 }
 
 ::tools::Rectangle RecentDocsViewItem::updateHighlight(bool bVisible, const Point& rPoint)
